dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/wrongArguments/mudaCor.alg
algoritmo "erro procedimento mudacor"


inicio

    mudaCor("aaa", "fundos")
    mudaCor("vermelho", "aaa")
    mudaCor("a")

fimalgoritmo
